sftp: do not show creation time when we do not know it

Summary:
creation time (aka birth time) is file system dependent, if the fs doesn't
support it we seem to get createtime==0. skip over it when that is the
case.

BUG: 375305
FIXED-IN: 20.04

Test Plan: browsing a directory on btrfs over sftp doesn't show creation time as 1970

Reviewers: ngraham, bruns, meven

Reviewed By: ngraham, bruns, meven

Subscribers: meven, bruns, kde-frameworks-devel, kfm-devel

Tags: #dolphin, #frameworks

Differential Revision: https://phabricator.kde.org/D27873